--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -791,7 +791,7 @@ hr {
   transition:250ms ease bottom;
   left:0;
   right:0;
-  padding: 0 0 0.7rem;
+  padding: 0 0 0.7rem!important;
 }
 
 .footer:hover{
