--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -1,10 +1,13 @@
 html {
   font-size: calc(100vw/90);
-  background-color: #ECECEC;
+  width: 100%;
+  height: 100%;
 }
 body {
   width: 100%;
   min-width: 1000px;
+  background-color: #ECECEC;
+  height:100%;
   margin: 0;
 }
 
@@ -282,7 +285,7 @@ ul {
 }
 
 .closedSec {
-  background-color: #F73B3B;
+  background-color: transparent;
 }
 
 .errorSec {
@@ -334,7 +337,7 @@ ul {
   min-width: 500px;
   opacity:0;
   max-width:60%;
-  min-height: 15em;
+  min-height: 12.5rem;
   max-height:50%;
   position:fixed;
   visibility:hidden;
@@ -344,6 +347,7 @@ ul {
   border-radius: 5px;
   vertical-align: top;
   transition: opacity 250ms ease;
+  padding:0.5rem!important;
 }
 
 #filter_search_toggler{
@@ -355,6 +359,7 @@ ul {
 
 .FilterPanel {
   height: 100%;
+  width: 40%;
   background-color: white;
   float: left;
   display: inline-block;
@@ -866,4 +871,9 @@ img.small{
   bottom: 2rem;
   opacity:0.8;
   box-shadow: 0 0 0.7rem rgba(100,100,100,0.6);
+}
+
+
+.level .button {
+  font-size: 0.75rem !important;
 }
