connected new schedule to redux

--- a/frontend/src/components/schedule/schedule.css
+++ b/frontend/src/components/schedule/schedule.css
@@ -6,5 +6,6 @@
     background-color: dodgerblue;
     color: #fff;
     border-radius: 5px;
+    margin-bottom: 0 !important;
     /* padding: 10px; */
 }
