--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -555,67 +555,47 @@ hr {
 
 
 
-.SchedBlock.red{
+.block.red{
   border-top-color:#D0021B;
-}
-
-.SchedBlock.red .SecName{
   color:#D0021B;
 }
 
-.SchedBlock.orange{
-  border-top-color:#F5A623;
-}
 
-.SchedBlock.orange .SecName{
+.block.orange{
+  border-top-color:#F5A623;
   color:#F5A623;
 }
 
-.SchedBlock.blue{
+.block.blue{
   border-top-color:#00BFDD;
-}
-
-.SchedBlock.blue .SecName{
   color:#00BFDD;
 }
 
-.SchedBlock.aqua{
-  border-top-color:#35E1BB;
-}
 
-.SchedBlock.aqua .SecName{
+.block.aqua{
+  border-top-color:#35E1BB;
   color:#35E1BB;
 }
 
-.SchedBlock.green{
-  border-top-color:#7ED321;
-}
 
-.SchedBlock.green .SecName{
+.block.green{
+  border-top-color:#7ED321;
   color:#7ED321;
 }
 
-.SchedBlock.pink{
-  border-top-color:#FF34CC;
-}
 
-.SchedBlock.pink .SecName{
+.block.pink{
+  border-top-color:#FF34CC;
   color:#FF34CC;
 }
 
-.SchedBlock.sea{
+.block.sea{
   border-top-color:#3055CC;
-}
-
-.SchedBlock.sea .SecName{
   color:#3055CC;
 }
 
-.SchedBlock.indigo{
+.block.indigo{
   border-top-color:#7874CF;
-}
-
-.SchedBlock.indigo .SecName{
   color:#7874CF;
 }
 
