--- a/frontend/src/components/schedule/schedule.css
+++ b/frontend/src/components/schedule/schedule.css
@@ -2,27 +2,42 @@
     display: grid;
     height: 100%;
     margin-right: 20px;
-    grid-gap: 10px;
+    column-gap: 0;
+    position: relative;
+
+    background-color: white;
+    font-family: 'Nunito';
 }
 .block {
     /*border-radius: 5px;*/
     margin-bottom: 0 !important;
     color: black;
-    border-top: 3px solid;
+    border-left: 4px solid;
+
     background-color:#FAFAFA;
     box-shadow:0 1px 3px 0 lightgrey;
+    /* padding: 10px; */
+}
+
+.day {
+    font-weight: bolder;
+    font-size: 1.25em;
+}
+
+.inner-block {
     text-align: center;
     display: flex;
     justify-content: center;
     flex-direction: column;
-    /* padding: 10px; */
+    width: 100%;
+    height: 100%;
 }
 
-.block > span {
+.inner-block > span {
     cursor: pointer;
 }
 
-.block > .remove {
+.inner-block > .remove {
     position: absolute;
     top: 2px;
     left: 4px;
@@ -31,11 +46,36 @@
     transition: opacity .25s ease-in-out;
 }
 
-.block:hover > .remove {
+.inner-block:hover > .remove {
     opacity: 1;
 }
 
 .time {
     position: absolute;
     top: -6px;
+}
+
+span.horizontalLine {
+    border-top: 1px solid gray;
+    opacity: .5;
+    /*left: -5px;*/
+    /*width: calc(100% + 10px);*/
+}
+
+span.horizontalLine-last {
+    border-bottom: 1px solid gray;
+    opacity: .5;
+    /*left: -5px;*/
+    /*width: calc(100% + 10px);*/
+}
+
+span.verticalLine {
+    border-left: 1px solid gray;
+    opacity: .5;
+    /*left: -5px;*/
+}
+span.verticalLine-last {
+    border-right: 1px solid gray;
+    opacity: .5;
+    /*right: -5px;*/
 }
