Fixed minor syntax error

--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -268,7 +268,7 @@ ul {
   color: #00B3FF;
 }
 
-/* .statusClass {
+/* .statusClass { */
   /* display: inline-block; */
   /* width: 1.5em; */
   /* height: 1.5em; */
@@ -280,8 +280,7 @@ ul {
   /* line-height: 13px; */
   /* border-radius: 2px; */
   /* -webkit-font-smoothing: antialiased; */
-
-} */
+/* }  */
 
 /* .openSec {
   background-color: #47EA4C;
